--- a/site/templates/footer.html.twig
+++ b/site/templates/footer.html.twig
@@ -1,4 +1,4 @@
-<footer id="sticky-footer" class="py-4 bg-dark text-white-50" style="padding-bottom: 6px">
+<footer class="py-4 bg-dark text-white-50" style="position: absolute;bottom: 0;width: 100%;">
     <div class="container text-center">
         <small>2019 - Made by LAURE Thomas and FEBVRE Ludovic</small>
     </div>
