--- a/site/templates/base.html.twig
+++ b/site/templates/base.html.twig
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fr-FR">
+<html lang="en">
     <head>
         <title>{% block title %}BDE{% endblock %}</title>
         <meta charset="UTF-8">
