--- a/site/templates/navbar_admin.html.twig
+++ b/site/templates/navbar_admin.html.twig
@@ -16,10 +16,10 @@
                         Registration
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="{{ path('registration', {'type': 'news'}) }}">News</a>
-                        <a class="dropdown-item" href="{{ path('registration', {'type': 'event'}) }}">Events</a>
-                        <a class="dropdown-item" href="{{ path('registration', {'type': 'project'}) }}">Projects</a>
-                        <a class="dropdown-item" href="{{ path('registration', {'type': 'contact'}) }}">Contacts</a>
+                        <a class="dropdown-item" href="{{ path('registration', {'type': 'News'}) }}">News</a>
+                        <a class="dropdown-item" href="{{ path('registration', {'type': 'Event'}) }}">Events</a>
+                        <a class="dropdown-item" href="{{ path('registration', {'type': 'Project'}) }}">Projects</a>
+                        <a class="dropdown-item" href="{{ path('registration', {'type': 'Contact'}) }}">Contacts</a>
                     </div>
                 </li>
             </ul>
