--- a/site/templates/registration.html.twig
+++ b/site/templates/registration.html.twig
@@ -3,10 +3,92 @@
 {% block body %}
     {{ parent() }}
     <div class="container">
-        <section>
-            <h1>{{ type_publication }} registration</h1>
-            <article>
+        <section class="mt-5">
+            <h1 class="text-center">{{ type }} registration</h1>
+            <article class="col-md-6 mx-auto">
+                {% if success_message is defined %}
+                    <div class="alert alert-success text-center">{{ success_message }}</div>
+                {% endif %}
                 {{ form_start(form) }}
+                    <div class="form-group">
+                        {% if type == 'Contact' %}
+                            <div class="form-group">
+                                {{ form_label(form.name, 'Name') }}
+                                {{ form_widget(form.name, {'attr': {'class': 'form-control'}}) }}
+                            </div>
+
+                            <div class="form-group">
+                                {{ form_label(form.firstname, 'Firstname') }}
+                                {{ form_widget(form.firstname, {'attr': {'class': 'form-control'}}) }}
+                            </div>
+
+                            <div class="form-group">
+                                {% if errors is defined %}
+                                    {% for error in errors %}
+                                        {% if error.label == 'email_existence' %}
+                                            <p class="text-danger"><i class="fas fa-exclamation-triangle"></i> {{ error.message }}</p>
+                                        {% endif %}
+                                    {% endfor %}
+                                {% endif %}
+                                {{ form_label(form.email, 'Email') }}
+                                {{ form_widget(form.email, {'attr': {'class': 'form-control'}}) }}
+                            </div>
+
+                            <div class="form-group">
+                                {{ form_label(form.phone, 'Phone') }}
+                                {{ form_widget(form.phone, {'attr': {'class': 'form-control'}}) }}
+                            </div>
+                        {% else %}
+                            <div class="form-group">
+                                {{ form_label(form.label, 'Label') }}
+                                {{ form_widget(form.label, {'attr': {'class': 'form-control'}}) }}
+                            </div>
+
+                            <div class="form-group">
+                                {{ form_label(form.description, 'Description') }}
+                                {{ form_widget(form.description, {'attr': {'class': 'form-control'}}) }}
+                            </div>
+
+                            <div class="form-group">
+                                {% if errors is defined %}
+                                    {% for error in errors %}
+                                        {% if error.label == 'image_format' %}
+                                            <p class="text-danger"><i class="fas fa-exclamation-triangle"></i> {{ error.message }}</p>
+                                        {% endif %}
+                                    {% endfor %}
+                                {% endif %}
+                                {{ form_label(form.image, 'Choose an image') }}
+                                {{ form_widget(form.image, {'attr': {'class': 'form-control-file'}}) }}
+                            </div>
+
+                            {% if type == 'Project' %}
+                                <div class="form-group">
+                                    {{ form_label(form.end_date, 'End date') }}
+                                    {{ form_widget(form.end_date) }}
+                                </div>
+                            {% endif %}
+
+                            {% if type == 'Event' %}
+                                <div class="form-group">
+                                    {{  form_label(form.event_date, 'Event date') }}
+                                    {{ form_widget(form.event_date) }}
+                                </div>
+
+                                <div class="form-group">
+                                    {{ form_label(form.place, 'Place') }}
+                                    {{ form_widget(form.place, {'attr': {'class': 'form-control'}}) }}
+                                </div>
+
+                                <div class="form-group">
+                                    {{  form_label(form.type_event, 'Event type') }}
+                                    {{ form_widget(form.type_event, {'attr': {'class': 'form-control'}}) }}
+                                </div>
+                            {% endif %}
+                        {% endif %}
+                        <div class="text-center">
+                            <button type="submit" class="btn btn-primary"><i class="fas fa-save"></i> Save</button>
+                        </div>
+                    </div>
                 {{ form_end(form) }}
             </article>
         </section>
