End of the registration

--- a/site/templates/publications.html.twig
+++ b/site/templates/publications.html.twig
@@ -1,6 +1,7 @@
-{% extends 'base.html.twig' %}
+{% extends 'header.html.twig' %}
 
 {% block body %}
+    {{ parent() }}
     <div class="container">
         <div class="row">
             <div class="col-md-4" style="width: 30rem">
