--- a/site/templates/contacts.html.twig
+++ b/site/templates/contacts.html.twig
@@ -1,30 +1,31 @@
-{% extends 'base.html.twig' %}
+{% extends 'header.html.twig' %}
 
 {% block body %}
-<div class="container">
-    <input class="form-control" id="myInput" type="text" placeholder="Search..">
-    <br>
-    <table class="table">
-        <thead class="thead-light">
-        <tr>
-            <th>Firstname</th>
-            <th>Lastname</th>
-            <th>Email</th>
-            <th>Phone</th>
-        </tr>
-        </thead>
-        <tbody id="contactTable">
-        {% for contact in contacts %}
-        <tr>
-            <td>{{ contact.firstname }}</td>
-            <td>{{ contact.name }}</td>
-            <td>{{ contact.email }}</td>
-            <td>{{ contact.phone }}</td>
-        </tr>
-        {% endfor %}
-        </tbody>
-    </table>
-</div>
+    {{ parent() }}
+    <div class="container">
+        <input class="form-control" id="myInput" type="text" placeholder="Search..">
+        <br>
+        <table class="table">
+            <thead class="thead-light">
+            <tr>
+                <th>Firstname</th>
+                <th>Lastname</th>
+                <th>Email</th>
+                <th>Phone</th>
+            </tr>
+            </thead>
+            <tbody id="contactTable">
+                {% for contact in contacts %}
+                    <tr>
+                        <td>{{ contact.firstname }}</td>
+                        <td>{{ contact.name }}</td>
+                        <td>{{ contact.email }}</td>
+                        <td>{{ contact.phone }}</td>
+                    </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+    </div>
 {% endblock %}
 
 {% block javascripts %}
