--- a/site/templates/navbar_admin.html.twig
+++ b/site/templates/navbar_admin.html.twig
@@ -1,6 +1,7 @@
-{% extends 'base.html.twig' %}
+{% extends "base.html.twig" %}
 
 {% block body %}
+    {{ parent() }}
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="#">Dashboard BDE</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
@@ -8,23 +9,23 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarText">
             <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
-                    <a class="nav-link" href="#">Client interface</a>
+                <li class="nav-item">
+                    <a class="nav-link" href="#"><i class="fas fa-user"></i> Client interface</a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Registration
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="{{ path('registration', {'type': 'News'}) }}">News</a>
-                        <a class="dropdown-item" href="{{ path('registration', {'type': 'Event'}) }}">Events</a>
-                        <a class="dropdown-item" href="{{ path('registration', {'type': 'Project'}) }}">Projects</a>
-                        <a class="dropdown-item" href="{{ path('registration', {'type': 'Contact'}) }}">Contacts</a>
+                        <a class="dropdown-item" href="{{ path('registration_publications', {'type': 'News'}) }}"><i class="fas fa-newspaper"></i> News</a>
+                        <a class="dropdown-item" href="{{ path('registration_publications', {'type': 'Event'}) }}"><i class="fas fa-calendar-day"></i> Events</a>
+                        <a class="dropdown-item" href="{{ path('registration_publications', {'type': 'Project'}) }}"><i class="fas fa-network-wired"></i> Projects</a>
+                        <a class="dropdown-item" href="{{ path('registration_publications', {'type': 'Contact'}) }}"><i class="fas fa-id-card"></i> Contacts</a>
                     </div>
                 </li>
             </ul>
             <span class="navbar-text">
-                <i class="fas fa-user"></i> Connection
+                <a href="{{ path('app_logout') }}"><i class="fas fa-sign-out-alt"></i> Logout</a>
             </span>
         </div>
     </nav>
