--- a/site/templates/navbar_admin.html.twig
+++ b/site/templates/navbar_admin.html.twig
@@ -10,7 +10,7 @@
         <div class="collapse navbar-collapse" id="navbarText">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="#"><i class="fas fa-user"></i> Client interface</a>
+                    <a class="nav-link" href="{{ path('publications') }}"><i class="fas fa-user"></i> Client interface</a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
