--- a/site/templates/registration.html.twig
+++ b/site/templates/registration.html.twig
@@ -50,6 +50,9 @@
                     </div>
                 </div>
             {{ form_end(form) }}
+            <div class="mt-3 text-center">
+                <p class="lead">Or <a href="{{ path('app_login') }}"> login</a></p>
+            </div>
         </article>
     </section>
 </div>
