Modif footer + bdd image nullable

--- a/site/templates/base.html.twig
+++ b/site/templates/base.html.twig
@@ -15,7 +15,7 @@
     <body>
         {% block body %}{% endblock %}
         {% block footer %}
-            <footer class="py-2 bg-dark text-white-50" style="position: absolute;bottom: 0;width: 100%;">
+            <footer class="py-2 bg-dark text-white-50" style="position: fixed;bottom: 0;width: 100%;">
                 <div class="container text-center">
                     <small>2019 - Made by LAURE Thomas and FEBVRE Ludovic</small>
                 </div>
