--- a/site/templates/publications.html.twig
+++ b/site/templates/publications.html.twig
@@ -8,13 +8,19 @@
                 <h1>Evenements :</h1>
                 <hr>
                 {% for event in events %}
-                    <div class="card mb-4 shadow-sm" >
+                    <div class="card mb-4 shadow-sm">
+                        {% if event.image != null %}
+                            <img class="img-fluid" src="{{ asset('images/publications/' ~ event.image) }}"
+                                 alt="Image non chargée.">
+                        {% endif %}
                         <div class="card-body">
                             <h4>{{ event.label }}</h4>
                             <p class="card-text text-justify">{{ event.description|truncate(250) }}</p>
                             <div class="d-flex justify-content-between align-items-center">
                                 <div class="btn-group">
-                                    <button type="button" class="btn btn-sm btn-outline-secondary" data-toggle="modal" data-target="#event-{{ event.id }}">View</button>
+                                    <button type="button submit" class="btn btn-sm btn-outline-secondary"
+                                            data-toggle="modal" data-target="#event-{{ event.id }}">View
+                                    </button>
                                 </div>
                                 <small class="text-muted">{{ event.datePublication|date('d/m/Y') }}</small>
                             </div>
@@ -32,17 +38,32 @@
 
                                 <!-- Modal body -->
                                 <div class="modal-body">
+                                    {% if event.image != null %}
+                                        <img class="img-fluid" src="{{ asset('images/publications/' ~ event.image) }}"
+                                             alt="Image non chargée.">
+                                    {% endif %}
                                     <p>
                                         {{ event.description }}
                                     </p>
+
+                                    {{ form_start(form_event) }}
+                                    <div class="form-group" hidden>
+                                        {{ form_widget(form_event.id) }}
+                                    </div>
+                                    <div class="form-group text-center">
+                                        {{ form_label(form_event.nb_persons,'Persons Number :') }}
+                                        {{ form_widget(form_event.nb_persons,{'attr': {'class': 'form-control'}}) }}
+                                    </div>
+                                    <div class="form-group text-center">
+                                        {{ form_widget(form_event.yes,{'attr': {'class': 'btn btn-success'}}) }}
+                                        {{ form_widget(form_event.no,{'attr': {'class': 'btn btn-danger'}}) }}
+                                    </div>
+                                    {{ form_end(form_event) }}
                                 </div>
 
                                 <!-- Modal footer -->
                                 <div class="modal-footer">
                                     <small class="text-muted">{{ event.datePublication|date('d/m/Y') }}</small>
-                                    <div class="btn-group">
-                                        <button type="button" class="btn btn-warning" data-dismiss="modal">Close</button>
-                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -54,14 +75,19 @@
                 <h1>News :</h1>
                 <hr>
                 {% for new in news %}
-                    <div class="card mb-4 shadow-sm" >
-                        <img class="img-fluid" src="{{ asset('images/publications/' ~ new.image) }}" alt="Image non chargée.">
+                    <div class="card mb-4 shadow-sm">
+                        {% if new.image != null %}
+                            <img class="img-fluid" src="{{ asset('images/publications/' ~ new.image) }}"
+                                 alt="Image non chargée.">
+                        {% endif %}
                         <div class="card-body">
                             <h4>{{ new.label }}</h4>
                             <p class="card-text text-justify">{{ new.description|truncate(250) }}</p>
                             <div class="d-flex justify-content-between align-items-center">
                                 <div class="btn-group">
-                                    <button type="button" class="btn btn-sm btn-outline-secondary" data-toggle="modal" data-target="#news-{{ new.id }}">View</button>
+                                    <button type="button submit" class="btn btn-sm btn-outline-secondary"
+                                            data-toggle="modal" data-target="#news-{{ new.id }}">View
+                                    </button>
                                 </div>
                                 <small class="text-muted">{{ new.datePublication|date('d/m/Y') }}</small>
                             </div>
@@ -74,13 +100,14 @@
                                 <!-- Modal Header -->
                                 <div class="modal-header">
                                     <h4 class="modal-title">{{ new.label }}</h4>
-                                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                                    <button type="button submit" class="close" data-dismiss="modal">&times;</button>
                                 </div>
 
                                 <!-- Modal body -->
                                 <div class="modal-body">
                                     {% if new.image != null %}
-                                        <img class="img-fluid" src="{{ asset('images/publications/' ~ new.image) }}" alt="Image non chargée.">
+                                        <img class="img-fluid" src="{{ asset('images/publications/' ~ new.image) }}"
+                                             alt="Image non chargée.">
                                     {% endif %}
                                     <p>
                                         {{ new.description }}
@@ -91,7 +118,11 @@
                                 <div class="modal-footer">
                                     <small class="text-muted">{{ new.datePublication|date('d/m/Y') }}</small>
                                     <div class="btn-group">
-                                        <button type="button" class="btn btn-warning" data-dismiss="modal">Close</button>
+                                        <button type="button submit" class="btn btn-success" data-dismiss="modal">I
+                                            participate
+                                        </button>
+                                        <button type="button submit" class="btn btn-danger">I don't participate</button>
+                                        <button type="button" class="btn btn-info" data-dismiss="modal">Close</button>
                                     </div>
                                 </div>
                             </div>
@@ -105,13 +136,18 @@
                 <hr>
                 {% for project in projects %}
                     <div class="card mb-4 shadow-sm">
-                        <img class="img-fluid" src="{{ asset('images/publications/' ~ project.image) }}" alt="Image non chargée.">
+                        {% if project.image != null %}
+                            <img class="img-fluid" src="{{ asset('images/publications/' ~ project.image) }}"
+                                 alt="Image non chargée.">
+                        {% endif %}
                         <div class="card-body">
                             <h4>{{ project.label }}</h4>
                             <p class="card-text text-justify">{{ project.description|truncate(250) }}</p>
                             <div class="d-flex justify-content-between align-items-center">
                                 <div class="btn-group">
-                                    <button type="button" class="btn btn-sm btn-outline-secondary" data-toggle="modal" data-target="#project-{{ project.id }}">View</button>
+                                    <button type="button submit" class="btn btn-sm btn-outline-secondary"
+                                            data-toggle="modal" data-target="#project-{{ project.id }}">View
+                                    </button>
                                 </div>
                                 <small class="text-muted">{{ project.datePublication|date('d/m/Y') }}</small>
                             </div>
@@ -130,7 +166,8 @@
                                 <!-- Modal body -->
                                 <div class="modal-body">
                                     {% if project.image != null %}
-                                        <img class="img-fluid" src="{{ asset('images/publications/' ~ project.image) }}" alt="Image non chargée.">
+                                        <img class="img-fluid" src="{{ asset('images/publications/' ~ project.image) }}"
+                                             alt="Image non chargée.">
                                     {% endif %}
                                     <p>
                                         {{ project.description }}
@@ -141,7 +178,11 @@
                                 <div class="modal-footer">
                                     <small class="text-muted">{{ project.datePublication|date('d/m/Y') }}</small>
                                     <div class="btn-group">
-                                        <button type="button" class="btn btn-warning" data-dismiss="modal">Close</button>
+                                        <button type="button submit" class="btn btn-success" data-dismiss="modal">I
+                                            participate
+                                        </button>
+                                        <button type="button submit" class="btn btn-danger">I don't participate</button>
+                                        <button type="button" class="btn btn-info" data-dismiss="modal">Close</button>
                                     </div>
                                 </div>
                             </div>
