--- a/site/templates/publications.html.twig
+++ b/site/templates/publications.html.twig
@@ -2,92 +2,45 @@
 
 {% block body %}
     {{ parent() }}
-    <div class="container">
-        <div class="row mt-5">
-            <div class="col-md-4" style="width: 30rem">
-                <h1>Evenements :</h1>
+    <div class="container-fluid">
+        <div class="row mt-5 mx-1">
+            <div class="col-md-4">
+                <h1 class="text-center">Events</h1>
                 <hr>
                 {% for event in events %}
                     <div class="card mb-4 shadow-sm">
-                        {% if event.image != null %}
-                            <img class="img-fluid" src="{{ asset('images/publications/' ~ event.image) }}"
-                                 alt="Image non chargée.">
+                        {% if event.image %}
+                            <img class="img-fluid" src="{{ asset('images/publications/' ~ event.image) }}" alt="Image not loaded.">
                         {% endif %}
                         <div class="card-body">
                             <h4>{{ event.label }}</h4>
-                            <p class="card-text text-justify">{{ event.description|truncate(250) }}</p>
+                            <p class="card-text">Place : {{ event.place }}</p>
+                            <p class="card-text text-justify">{{ event.description|truncate(250) }}...</p>
                             <div class="d-flex justify-content-between align-items-center">
                                 <div class="btn-group">
-                                    <button type="button submit" class="btn btn-sm btn-outline-secondary"
-                                            data-toggle="modal" data-target="#event-{{ event.id }}">View
-                                    </button>
+                                    <a class="btn btn-sm btn-outline-secondary" href="{{ path('publication',{"type" : "event","id" : event.id}) }}"><i class="fas fa-info"></i> View</a>
                                 </div>
                                 <small class="text-muted">{{ event.datePublication|date('d/m/Y') }}</small>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="modal" id="event-{{ event.id }}">
-                        <div class="modal-dialog">
-                            <div class="modal-content">
-                                <!-- Modal Header -->
-                                <div class="modal-header">
-                                    <h4 class="modal-title">{{ event.label }}</h4>
-                                    <button type="button" class="close" data-dismiss="modal">&times;</button>
-                                </div>
-
-                                <!-- Modal body -->
-                                <div class="modal-body">
-                                    {% if event.image != null %}
-                                        <img class="img-fluid" src="{{ asset('images/publications/' ~ event.image) }}"
-                                             alt="Image non chargée.">
-                                    {% endif %}
-                                    <p>
-                                        {{ event.description }}
-                                    </p>
-
-                                    {{ form_start(form_event) }}
-                                    <div class="form-group" hidden>
-                                        {{ form_widget(form_event.id) }}
-                                    </div>
-                                    <div class="form-group text-center">
-                                        {{ form_label(form_event.nb_persons,'Persons Number :') }}
-                                        {{ form_widget(form_event.nb_persons,{'attr': {'class': 'form-control'}}) }}
-                                    </div>
-                                    <div class="form-group text-center">
-                                        {{ form_widget(form_event.yes,{'attr': {'class': 'btn btn-success'}}) }}
-                                        {{ form_widget(form_event.no,{'attr': {'class': 'btn btn-danger'}}) }}
-                                    </div>
-                                    {{ form_end(form_event) }}
-                                </div>
-
-                                <!-- Modal footer -->
-                                <div class="modal-footer">
-                                    <small class="text-muted">{{ event.datePublication|date('d/m/Y') }}</small>
-                                </div>
                             </div>
                         </div>
                     </div>
                 {% endfor %}
             </div>
 
-            <div class="col-md-4" style="width: 30rem">
-                <h1>News :</h1>
+            <div class="col-md-4">
+                <h1 class="text-center">News</h1>
                 <hr>
                 {% for new in news %}
                     <div class="card mb-4 shadow-sm">
-                        {% if new.image != null %}
-                            <img class="img-fluid" src="{{ asset('images/publications/' ~ new.image) }}"
-                                 alt="Image non chargée.">
+                        {% if new.image %}
+                            <img class="img-fluid" src="{{ asset('images/publications/' ~ new.image) }}" alt="Image not loaded.">
                         {% endif %}
                         <div class="card-body">
                             <h4>{{ new.label }}</h4>
-                            <p class="card-text text-justify">{{ new.description|truncate(250) }}</p>
+                            <p class="card-text text-justify">{{ new.description|truncate(250) }}...</p>
                             <div class="d-flex justify-content-between align-items-center">
                                 <div class="btn-group">
-                                    <button type="button submit" class="btn btn-sm btn-outline-secondary"
-                                            data-toggle="modal" data-target="#news-{{ new.id }}">View
-                                    </button>
+                                    <button type="button submit" class="btn btn-sm btn-outline-secondary" data-toggle="modal" data-target="#news-{{ new.id }}"><i class="fas fa-info"></i> View</button>
                                 </div>
                                 <small class="text-muted">{{ new.datePublication|date('d/m/Y') }}</small>
                             </div>
@@ -97,33 +50,19 @@
                     <div class="modal" id="news-{{ new.id }}">
                         <div class="modal-dialog">
                             <div class="modal-content">
-                                <!-- Modal Header -->
                                 <div class="modal-header">
                                     <h4 class="modal-title">{{ new.label }}</h4>
                                     <button type="button submit" class="close" data-dismiss="modal">&times;</button>
                                 </div>
-
-                                <!-- Modal body -->
                                 <div class="modal-body">
-                                    {% if new.image != null %}
-                                        <img class="img-fluid" src="{{ asset('images/publications/' ~ new.image) }}"
-                                             alt="Image non chargée.">
+                                    {% if new.image %}
+                                        <img class="img-fluid" src="{{ asset('images/publications/' ~ new.image) }}" alt="Image not loaded.">
                                     {% endif %}
-                                    <p>
-                                        {{ new.description }}
-                                    </p>
+                                    <p class="lead">{{ new.description }}</p>
                                 </div>
-
-                                <!-- Modal footer -->
                                 <div class="modal-footer">
                                     <small class="text-muted">{{ new.datePublication|date('d/m/Y') }}</small>
-                                    <div class="btn-group">
-                                        <button type="button submit" class="btn btn-success" data-dismiss="modal">I
-                                            participate
-                                        </button>
-                                        <button type="button submit" class="btn btn-danger">I don't participate</button>
-                                        <button type="button" class="btn btn-info" data-dismiss="modal">Close</button>
-                                    </div>
+                                    <button type="button" class="btn btn-info" data-dismiss="modal"><i class="fas fa-times"></i> Close</button>
                                 </div>
                             </div>
                         </div>
@@ -132,59 +71,21 @@
             </div>
 
             <div class="col-md-4" style="width: 30rem">
-                <h1>Projets :</h1>
+                <h1 class="text-center">Projects</h1>
                 <hr>
                 {% for project in projects %}
                     <div class="card mb-4 shadow-sm">
                         {% if project.image != null %}
-                            <img class="img-fluid" src="{{ asset('images/publications/' ~ project.image) }}"
-                                 alt="Image non chargée.">
+                            <img class="img-fluid" src="{{ asset('images/publications/' ~ project.image) }}" alt="Image not loaded.">
                         {% endif %}
                         <div class="card-body">
                             <h4>{{ project.label }}</h4>
-                            <p class="card-text text-justify">{{ project.description|truncate(250) }}</p>
+                            <p class="card-text text-justify">{{ project.description|truncate(250) }}...</p>
                             <div class="d-flex justify-content-between align-items-center">
                                 <div class="btn-group">
-                                    <button type="button submit" class="btn btn-sm btn-outline-secondary"
-                                            data-toggle="modal" data-target="#project-{{ project.id }}">View
-                                    </button>
+                                    <a class="btn btn-sm btn-outline-secondary" href="{{ path('publication', {'type' : "project", 'id' : project.id}) }}"><i class="fas fa-info"></i> View</a>
                                 </div>
                                 <small class="text-muted">{{ project.datePublication|date('d/m/Y') }}</small>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="modal" id="project-{{ project.id }}">
-                        <div class="modal-dialog">
-                            <div class="modal-content">
-                                <!-- Modal Header -->
-                                <div class="modal-header">
-                                    <h4 class="modal-title">{{ project.label }}</h4>
-                                    <button type="button" class="close" data-dismiss="modal">&times;</button>
-                                </div>
-
-                                <!-- Modal body -->
-                                <div class="modal-body">
-                                    {% if project.image != null %}
-                                        <img class="img-fluid" src="{{ asset('images/publications/' ~ project.image) }}"
-                                             alt="Image non chargée.">
-                                    {% endif %}
-                                    <p>
-                                        {{ project.description }}
-                                    </p>
-                                </div>
-
-                                <!-- Modal footer -->
-                                <div class="modal-footer">
-                                    <small class="text-muted">{{ project.datePublication|date('d/m/Y') }}</small>
-                                    <div class="btn-group">
-                                        <button type="button submit" class="btn btn-success" data-dismiss="modal">I
-                                            participate
-                                        </button>
-                                        <button type="button submit" class="btn btn-danger">I don't participate</button>
-                                        <button type="button" class="btn btn-info" data-dismiss="modal">Close</button>
-                                    </div>
-                                </div>
                             </div>
                         </div>
                     </div>
