--- a/site/templates/base.html.twig
+++ b/site/templates/base.html.twig
@@ -10,12 +10,13 @@
         <meta name="description" content="Interface administration BDE">
         {% block stylesheets %}
             <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+            <link rel="stylesheet" href="{{ asset('css/style.css') }}">
         {% endblock %}
     </head>
     <body>
         {% block body %}{% endblock %}
         {% block footer %}
-            <footer class="py-2 bg-dark text-white-50" style="position: fixed;bottom: 0;width: 100%;">
+            <footer class="py-2 bg-dark text-white-50">
                 <div class="container text-center">
                     <small>2019 - Made by LAURE Thomas and FEBVRE Ludovic</small>
                 </div>
