--- a/site/templates/contacts.html.twig
+++ b/site/templates/contacts.html.twig
@@ -10,7 +10,7 @@
                 <thead class="thead-dark">
                 <tr>
                     <th scope="col">Firstname</th>
-                    <th scope="col">Lastname</th>
+                    <th scope="col">Name</th>
                     <th scope="col">Email</th>
                     <th scope="col">Phone</th>
                 </tr>
