--- a/site/templates/dashboard.html.twig
+++ b/site/templates/dashboard.html.twig
@@ -4,7 +4,7 @@
     {{ parent() }}
     <div class="container">
         <section>
-            <div class="row mt-5">
+            <div class="row my-5">
                 <div class="col-sm-6">
                     <div class="card">
                         <div class="card-body">
