--- a/site/templates/publications.html.twig
+++ b/site/templates/publications.html.twig
@@ -3,8 +3,8 @@
 {% block body %}
     {{ parent() }}
     <div class="container-fluid">
-        <div class="row mt-5 mx-1">
-            <div class="col-md-4">
+        <div class="row my-5 mx-1">
+            <div class="col-md-4 px-5">
                 <h1 class="text-center">Events</h1>
                 <hr>
                 {% for event in events %}
@@ -14,20 +14,19 @@
                         {% endif %}
                         <div class="card-body">
                             <h4>{{ event.label }}</h4>
-                            <p class="card-text">Place : {{ event.place }}</p>
+                            <p class="card-text"><i class="fas fa-map-marker-alt"></i> {{ event.place }}</p>
                             <p class="card-text text-justify">{{ event.description|truncate(250) }}...</p>
                             <div class="d-flex justify-content-between align-items-center">
                                 <div class="btn-group">
                                     <a class="btn btn-sm btn-outline-secondary" href="{{ path('publication',{"type" : "event","id" : event.id}) }}"><i class="fas fa-info"></i> View</a>
                                 </div>
-                                <small class="text-muted">{{ event.datePublication|date('d/m/Y') }}</small>
+                                <small class="text-muted"><i class="far fa-calendar-alt"></i> {{ event.eventDate|date('d/m/Y') }}</small>
                             </div>
-                        </div>
-                    </div>
+                        </div
                 {% endfor %}
             </div>
 
-            <div class="col-md-4">
+            <div class="col-md-4 px-5">
                 <h1 class="text-center">News</h1>
                 <hr>
                 {% for new in news %}
@@ -42,7 +41,7 @@
                                 <div class="btn-group">
                                     <button type="button submit" class="btn btn-sm btn-outline-secondary" data-toggle="modal" data-target="#news-{{ new.id }}"><i class="fas fa-info"></i> View</button>
                                 </div>
-                                <small class="text-muted">{{ new.datePublication|date('d/m/Y') }}</small>
+                                <small class="text-muted"><i class="far fa-calendar-alt"></i> {{ new.datePublication|date('d/m/Y') }}</small>
                             </div>
                         </div>
                     </div>
@@ -61,7 +60,7 @@
                                     <p class="lead">{{ new.description }}</p>
                                 </div>
                                 <div class="modal-footer">
-                                    <small class="text-muted">{{ new.datePublication|date('d/m/Y') }}</small>
+                                    <small class="text-muted"><i class="far fa-calendar-alt"></i> {{ new.datePublication|date('d/m/Y') }}</small>
                                     <button type="button" class="btn btn-info" data-dismiss="modal"><i class="fas fa-times"></i> Close</button>
                                 </div>
                             </div>
@@ -70,7 +69,7 @@
                 {% endfor %}
             </div>
 
-            <div class="col-md-4" style="width: 30rem">
+            <div class="col-md-4 px-5">
                 <h1 class="text-center">Projects</h1>
                 <hr>
                 {% for project in projects %}
@@ -85,7 +84,7 @@
                                 <div class="btn-group">
                                     <a class="btn btn-sm btn-outline-secondary" href="{{ path('publication', {'type' : "project", 'id' : project.id}) }}"><i class="fas fa-info"></i> View</a>
                                 </div>
-                                <small class="text-muted">{{ project.datePublication|date('d/m/Y') }}</small>
+                                <small class="text-muted"><i class="far fa-calendar-alt"></i> {{ project.endDate|date('d/m/Y') }}</small>
                             </div>
                         </div>
                     </div>
