--- a/site/templates/registration.html.twig
+++ b/site/templates/registration.html.twig
@@ -3,7 +3,7 @@
 {% block body %}
 {{ parent() }}
 <div class="container">
-    <section class="mt-5">
+    <section class="my-5">
         <h1 class="text-center">Create an account</h1>
         <article class="col-md-6 mx-auto">
             {% if success_message is defined %}
